<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/calendar_container"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:orientation="vertical"
              android:padding="10dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <android.support.v7.widget.AppCompatTextView
                style="@style/TextviewStyle"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/back_calendar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/add_edit_travel_itinerary"/>
        <android.support.v7.widget.AppCompatButton
                style="@style/button_left_menu"
                android:id="@+id/back_calendar"
                android:layout_width="wrap_content"
                android:text="@string/back" android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>


    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent">


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                        style="@style/TextviewStyle"
                        android:maxLines="1"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/back_calendar"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="left"
                        android:text="@string/destination"/>

                <android.support.v7.widget.AppCompatEditText
                        android:layout_height="50dp"
                        style="@style/EdittextStyle"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/destination"
                        android:hint="@string/us_uk"
                        android:maxLines="1"
                        android:layout_width="match_parent"

                />

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                    style="@style/TextviewStyle"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/back_calendar"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/please_select_depart_and_return_date"/>

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mcv_selectionColor="@color/colorPrimary"
                    app:mcv_showOtherDates="all"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_height="50dp">

                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_people"
                        android:layout_alignParentBottom="true"/>


                <android.support.v7.widget.AppCompatEditText
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/number_of_people_test"
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                    style="@style/button_left_menu"
                    android:id="@+id/save_calendar"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:text="@string/submit"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>