<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        style="@style/TextInputStyle"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            style="@style/EdittextStyle"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:text="ntanduc2288@gmail.com" />

    </android.support.design.widget.TextInputLayout>


    <com.andexert.library.RippleView
        android:id="@+id/rippleResetPassword"
        rv_centered="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            style="@style/general_button_style"

            android:text="@string/reset_password"
            />

    </com.andexert.library.RippleView>
</LinearLayout>